add session controller, user login feature, save user to session

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,9 +14,21 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+        <% if logged_in? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+              Account
+            </a>
+            <div class="dropdown-menu">
+              <%= link_to "Profile", profile_users_path, class: "dropdown-item" %>
+              <%= link_to "Logout", logout_path, class: "dropdown-item", method: :delete %>
+            </div>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Login</a>
+          </li>
+        <% end %>
     </ul>
   </div>
 </nav>
