--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 offset-md-3 pt-3">
       <h1 class="text-center">Sign up here !</h1>
-      <%= form_for(@user) do |f| %>
+      <%= form_for(@user, url: signup_path) do |f| %>
         <%= render "shared/error_alert" %>
         <div class="form-group">
           <label for="name"><%= f.label :name %></label>
