--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -1,65 +1,191 @@
-.circle-btn {
-  width:40px;
-  height:40px;
-  border-radius: 50%;
-}
-.fb-bg {
-  background:#4267b2;
-}
-.gg-bg {
-  background:#d93025;
+body {
+  background: #fafafa;
+  font-size: 14px;
 }
 
-.bg-cyan {
-  background:#3897f0;
+//ultis
+.custom-nav-bar {
+  height:77px;
 }
-
-.fw-600{
+.fw-600 {
   font-weight: 600;
 }
-
-.text-cyan {
-  color: #3897f0;
+.gray-border-top {
+  border-top: 1px solid #e6e6e6;
 }
-
-.text-cyan:hover {
-  color:#2982d6;
+.gray-border-bottom {
+  border-bottom: 1px solid #e6e6e6;
 }
+.gray-border-left {
+  border-left: 1px solid #e6e6e6;
+}
+.gray-border-right {
+  border-right: 1px solid #e6e6e6;
+}
+.fa-large{
+  font-size:30px;
+}
+//end ultis
+//========================================================
+//custom background color
+.bg-white {
+  background: #ffffff;
 
+
+}
+.fb-bg {
+  background: #4267b2;
+}
+.gg-bg {
+  background: #d93025;
+}
+.bg-cyan {
+  background: #3897f0;
+}
+//end custom background color
+//=======================================================
+//custom button
+.circle-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 .btn-cyan {
   background: #3897f0;
 }
-
 .btn-cyan:hover {
   background: #2982d6;
 }
-
 .btn-gray {
-  background: #f8f9fa;
+  background:#f8f9fa;
 }
-
 .btn-cyan:focus {
   border: 1px solid #3897f0;
 }
-
 .btn-gray:focus {
   border: 1px solid #ced4da;
 }
-
+//end custom button
+//=================================================================
+//custom text color
+.text-cyan {
+  color: #3897f0;
+}
+.text-cyan:hover {
+  color: #2982d6;
+}
+//end custom text color
+//=======================================================
+// form-control custom
 .custom-form-control {
   border:1px solid #d6dadf;
 }
-
 .custom-form-control:focus {
   border: 1px solid #b9bcbe;
 }
-
 .disabled-focus:focus {
   outline:none;
   box-shadow: none;
 }
-
 .custom-image-input {
   border-radius: 4px;
   width:100%;
 }
+// end form-control custom
+//==========================================
+// post list
+.post-wrapper {
+  border-radius: 3px;
+  border: 1px solid #e6e6e6;
+}
+.post-header {
+  height: 60px;
+  /* padding: 16px; */
+}
+.avatar > img {
+  width:40px;
+  height:40px;
+  border-radius: 50%;
+}
+.feeds {
+  margin-top: 137px;
+}
+.post-thumbnail > img {
+  width: 100%;
+  height: auto;
+}
+.comment-input {
+  min-height: 56px;
+  max-height: 80px;
+}
+.comment-input > textarea {
+  background: 0 0;
+  border: 0;
+  color: #262626;
+  font-size: inherit;
+  height: 18px;
+  max-height: 80px;
+  outline: 0;
+  padding: 0;
+  resize: none;
+}
+.comment-btn {
+  border: 0;
+  color: #3897f0;
+  display: inline;
+  padding: 0;
+  -moz-appearance: none;
+  appearance: none;
+  background: 0 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-weight: 600;
+  text-align: center;
+  text-transform: inherit;
+  text-overflow: ellipsis;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  width: auto;
+
+
+  outline: 0 !important;
+
+}
+.comment-input > form > textarea {
+  flex-grow: 1;
+  background: 0 0;
+  border: 0;
+  color: #262626;
+  font-size: inherit;
+  height: 18px;
+  min-height:18px;
+  max-height: 80px;
+  outline: 0;
+  padding: 0;
+  resize: none;
+  overflow: hidden;
+}
+// end post list
+//==========================================
+// post detail
+.post-detail {
+  align-items: stretch;
+}
+.post-detail-wrapper {
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+}
+.post-detail-comments-wrapper{
+  position: relative;
+  overflow-x: hidden;
+  flex-grow: 1;
+  -webkit-flex-shrink: 1;
+  -ms-flex-negative: 1;
+  flex-shrink: 1;
+  min-height: 0;
+  height: calc(100% - 206px);
+}
+.post-detail-comments {
+  position: absolute;
+}
+//post detail
