--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+@import url('https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css');
 $font-family-base: 'Roboto', sans-serif;
 @import "bootstrap";
-@import "font-awesome";
 @import "_custom.scss";
-
-// *, body {
-//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-// }
