--- a/app/views/shared/_error_alert.html.erb
+++ b/app/views/shared/_error_alert.html.erb
@@ -1,9 +1,9 @@
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
   <div class="alert alert-danger">
-    The form contains <%= pluralize(@user.errors.count, "error") %>
+    The form contains <%= pluralize(object.errors.count, "error") %>
   </div>
   <ul>
-    <% @user.errors.full_messages.each do |m| %>
+    <% object.errors.full_messages.each do |m| %>
       <li><%= m %></li>
     <% end %>
   </ul>
