--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= render partial: "shared/alert" %>
   <div class="row">
     <div class="col-md-10 offset-md-1">
       <div class="row mt-5">
