--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -6,7 +6,7 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-sm-4 col-md-4">
-              <%= image_tag( @user.image.present? ?  @user.image.to_s : 'default_avatar.png', class: 'circle-image' ) %>
+              <%= image_tag( @user.image.present? ?  @user.image.to_s : 'default_avatar.png', class: 'circle-image user-profile-image' ) %>
             </div>
             <div class="col-sm-4 col-md-4">
               <div class="row">
