--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -10,9 +10,6 @@ body {
 
 .circle-image {
   border-radius: 50%;
-  min-height: 75px;
-  height: auto;
-  max-height: 130px;
 }
 
 .fa-6 {
@@ -322,6 +319,12 @@ body {
 //end edit-page
 //==========================================
 //profile-page
+.user-profile-image {
+  min-height: 75px;
+  height: auto;
+  max-height: 130px;
+}
+
 .profile-post-thumbnail {
   position: relative;
   object-fit: cover;
@@ -362,3 +365,24 @@ body {
 }
 
 //end profile-page
+
+.search-wrapper {
+  border-radius:4px;
+  border:1px solid #e6e6e6;
+
+  form {
+    input {
+      border:0px;
+
+      &:focus {
+        border:0;
+        outline:0;
+      }
+    }
+  }
+}
+
+.latest-posts{
+  border-radius:4px;
+  border:1px solid #e6e6e6;
+}
