search posts with title or content or category

--- a/app/views/layouts/_right_side_bar.html.erb
+++ b/app/views/layouts/_right_side_bar.html.erb
@@ -1,13 +1,35 @@
-<div class="row">
-  <div class="col-md-12 d-flex align-items-center">
-    <%= image_tag( current_user.image.present? ?  'default_avatar.png' : 'default_avatar.png', class: "float-left circle-image", height: '55px', width: '55px' ) %>
-    <div class="ml-3">
-      <strong><%= current_user.email %></strong>
-      <br>
-      <%= current_user.name %>
+<div class=" row">
+  <% if  logged_in? %>
+    <div class="col-md-12 d-flex align-items-center">
+      <%= image_tag( current_user.image.to_s, class: "float-left circle-image", height: '55px', width: '55px' ) %>
+      <div class="ml-3">
+        <strong><%=  logged_in?current_user.email %></strong>
+        <br>
+        <%= current_user.name %>
+      </div>
     </div>
-  </div>
+  <% else %>
+    <div class="col-md-12 d-flex align-items-center">
+      <%= image_tag( "default_avatar.png", class: "float-left circle-image", height: '55px', width: '55px' ) %>
+      <div class="ml-3">
+        <%= link_to "Login now!", login_path, class: "text-decoration-none text-dark" %>
+      </div>
+    </div>
+  <% end %>
+
   <div class="col-md-12 latest-posts p-3 mt-3">
     <p class="text-secondary"><strong>Latest posts</strong></p>
+    <% @latest_posts.each do |post| %>
+      <div class="d-flex align-items-center mb-3">
+        <div class="avatar">
+          <%= image_tag( post.user.image.present? ?  post.user.image.to_s : 'default_avatar.png' ) %>
+        </div>
+        <div class="ml-2">
+          <%= post.title %>
+          <br>
+          <i class="text-secondary"><%=  time_ago_in_words(post.created_at) %> ago</i>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
