--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-12 mb-5">
   <div id="post-<%= post.id %>" class="post-wrapper bg-white">
     <div class="post-header gray-border-bottom d-flex flex-row align-items-center p-3">
       <div class="avatar">
