--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,8 +5,10 @@
         <%= render @posts %>
       </div>
     </div>
-    <div class="col-md-5">
-      <%= render "layouts/right_side_bar" %>
+    <div class="col-md-5 ">
+      <div class="position-sticky sticky-top">
+        <%= render "layouts/right_side_bar" %>
+      </div>
     </div>
   </div>
 </div>
