--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white gray-border-bottom" style="background-color: #71da71;">
   <div class="container ">
-    <a class="navbar-brand" href="#">
+    <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag( 'ooo_original.jpg', height: '56px' ) %>
-    </a>
+    <% end %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="ml-auto search-wrapper p-2">
         <i class="fa fa-search fa-md float-left mt-1 mr-2 text-secondary"></i>
-        <%= form_for(:post, url: search_posts_path, enforce_utf8: false, html: { method: :get, class: "float-left pt-1 pr-1" } ) do |f| %>
-          <%= f.text_field :text, type: "text", placeholder: "Search..." %>
+        <%= form_for(:post_search, url: search_posts_path, enforce_utf8: false, html: { method: :get, class: "float-left pt-1 pr-1" } ) do |f| %>
+          <%= f.text_field :text, type: "text", placeholder: "Search...", value: !@text.blank? ? @text : "" %>
         <% end %>
       </div>
       <ul class="navbar-nav ml-auto">
