aplly cloudinary free storage

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white gray-border-bottom" style="background-color: #71da71;">
   <div class="container ">
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag( 'ooo_original.jpg', height: '56px' ) %>
+      <%= image_tag( 'https://res.cloudinary.com/deku52155/image/upload/v1568018138/ooo_original_u8ga4x.jpg', height: '56px' ) %>
     <% end %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
