--- a/app/views/layouts/_right_side_bar.html.erb
+++ b/app/views/layouts/_right_side_bar.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-12 d-flex align-items-center">
       <%= image_tag( current_user.image.to_s, class: "float-left circle-image", height: '55px', width: '55px' ) %>
       <div class="ml-3">
-        <strong><%=  logged_in?current_user.email %></strong>
+        <strong><%=  current_user.email %></strong>
         <br>
         <%= current_user.name %>
       </div>
