--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,11 @@
       </div>
       <ul class="navbar-nav ml-auto">
         <% if logged_in? %>
+          <% if current_user.role == "admin" %>
+            <li class="nav-item">
+              <%= link_to "Dashboard", admin_path, class:"nav-link" %>
+            </li>
+          <% end %>
           <li class="nav-item">
             <%= link_to "Profile", profile_users_path, class:"nav-link" %>
           </li>
@@ -23,10 +28,10 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <%= link_to "Login", login_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sign up</a>
+            <%= link_to "Signup", signup_path, class:"nav-link" %>
           </li>
         <% end %>
       </ul>
