--- a/app/views/layouts/_right_side_bar.html.erb
+++ b/app/views/layouts/_right_side_bar.html.erb
@@ -1,7 +1,7 @@
 <div class=" row">
   <% if  logged_in? %>
     <div class="col-md-12 d-flex align-items-center">
-      <%= image_tag( current_user.image.to_s, class: "float-left circle-image", height: '55px', width: '55px' ) %>
+      <%= image_tag( !current_user.image.blank? ? current_user.image.to_s : "default_avatar.png", class: "float-left circle-image", height: '55px', width: '55px' ) %>
       <div class="ml-3">
         <strong><%=  current_user.email %></strong>
         <br>
@@ -20,17 +20,21 @@
 
   <div class="col-md-12 latest-posts p-3 mt-3">
     <p class="text-secondary"><strong>Latest posts</strong></p>
-    <% @latest_posts.each do |post| %>
-      <div class="d-flex align-items-center mb-3">
-        <div class="avatar">
-          <%= image_tag( post.user.image.present? ?  post.user.image.to_s : get_img_from_cloud('default_avatar_ezjbiv.png') ) %>
+    <% if @latest_posts.any? %>
+      <p class="text-secondary">No more posts</p>
+    <% else %>
+      <% @latest_posts.each do |post| %>
+        <div class="d-flex align-items-center mb-3">
+          <div class="avatar">
+            <%= image_tag( post.user.image.present? ?  post.user.image.to_s : get_img_from_cloud('default_avatar_ezjbiv.png') ) %>
+          </div>
+          <div class="ml-2">
+            <%= post.title %>
+            <br>
+            <i class="text-secondary"><%=  time_ago_in_words(post.created_at) %> ago</i>
+          </div>
         </div>
-        <div class="ml-2">
-          <%= post.title %>
-          <br>
-          <i class="text-secondary"><%=  time_ago_in_words(post.created_at) %> ago</i>
-        </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
