pagination and filter for user's posts

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -22,8 +22,27 @@
           </div>
         </div>
         <div class="col-md-12 mt-4">
-          <h3 class="text-center font-weight-light mb-4">Posts</h3>
+          <!-- <h3 class="text-center font-weight-light mb-4">Posts</h3> -->
           <div class="row">
+            <div class="col-md-4 text-center mb-4">
+              <%= link_to profile_users_path(status: :new), class: "text-decoration-none text-dark" do %>
+                <i class="fa fa-large fa-gears"></i>
+                <div>Pending posts</div>
+              <% end %>
+            </div>
+            <div class="col-md-4 text-center mb-4">
+              <%= link_to profile_users_path(status: :approved), class: "text-decoration-none text-dark" do %>
+                <i class="fa fa-large fa-check-square"></i>
+                <div>Approved posts</div>
+              <% end %>
+            </div>
+            <div class="col-md-4 text-center mb-4">
+              <%= link_to profile_users_path(status: :rejected), class: "text-decoration-none text-dark" do %>
+                <i class="fa fa-large fa-ban"></i>
+                <div>Rejected posts</div>
+              <% end %>
+            </div>
+
             <% if(@posts.length > 0) %>
               <% @posts.each do |p| %>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mb-4">
@@ -43,19 +62,21 @@
                     </div>
                   <% end %>
                 </div>
+
               <% end %>
-            <% else %>
+            <% elsif @user.posts.any? %>
               <%= link_to new_post_path, class: "col-md-12 text-center text-decoration-none text-secondary" do %>
-                <h3 class="font-weight-light " >
+                <h3 class="mt-5 font-weight-light " >
                   <i>No more posts</i>
                   <br>
-                  <i>Add your first post now</i>
+                  <i>Add new post now</i>
                   <br>
                   <i class="fa fa-camera-retro fa-6"></i>
                 </h3>
               <% end %>
             <% end %>
           </div>
+          <%= will_paginate(@posts, list_classes: %w(pagination justify-content-center)) %>
         </div>
       </div>
     </div>
