--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,7 +21,7 @@
             </li>
           <% end %>
           <li class="nav-item">
-            <%= link_to "Profile", profile_users_path, class:"nav-link" %>
+            <%= link_to "Profile", profile_users_path(status: :new), class:"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Logout", logout_path, method: :delete, class:"nav-link" %>
