--- a/app/views/posts/_post_comment.html.erb
+++ b/app/views/posts/_post_comment.html.erb
@@ -1,5 +1,5 @@
  <div class="post-body">
-  <span class="fw-600"> <%= comment.user.name %></span>
+  <span class="fw-600"> <%= link_to comment.user.name, user_path(comment.user), class: "text-decoration-none text-dark fw-600" %></span>
   <span class="font-weight-normal">
     <%= comment.content %>
   </span>
