--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -25,19 +25,19 @@
           <!-- <h3 class="text-center font-weight-light mb-4">Posts</h3> -->
           <div class="row">
             <div class="col-md-4 text-center mb-4">
-              <%= link_to profile_users_path(status: :new), class: "text-decoration-none text-dark" do %>
+              <%= link_to profile_users_path(status: :new), class: "text-decoration-none text-dark #{@status == 'new' ? 'font-weight-bold' : ''}" do %>
                 <i class="fa fa-large fa-gears"></i>
                 <div>Pending posts</div>
               <% end %>
             </div>
             <div class="col-md-4 text-center mb-4">
-              <%= link_to profile_users_path(status: :approved), class: "text-decoration-none text-dark" do %>
+              <%= link_to profile_users_path(status: :approved), class: "text-decoration-none text-dark #{@status == 'approved' ? 'font-weight-bold' : ''}" do %>
                 <i class="fa fa-large fa-check-square"></i>
                 <div>Approved posts</div>
               <% end %>
             </div>
             <div class="col-md-4 text-center mb-4">
-              <%= link_to profile_users_path(status: :rejected), class: "text-decoration-none text-dark" do %>
+              <%= link_to profile_users_path(status: :rejected), class: "text-decoration-none text-dark #{@status == 'rejected' ? 'font-weight-bold' : ''}" do %>
                 <i class="fa fa-large fa-ban"></i>
                 <div>Rejected posts</div>
               <% end %>
