--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -367,8 +367,10 @@ body {
 //end profile-page
 
 .search-wrapper {
+
   border-radius:4px;
   border:1px solid #e6e6e6;
+  height: 46px !important;
 
   form {
     input {
