--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row p-5">
-    <div class="col-md-7">
+    <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7">
       <div class="row">
         <%= render @posts %>
       </div>
     </div>
-    <div class="col-md-5 ">
+    <div class="d-none d-sm-none d-md-block col-md-5 col-lg-5 col-xl-5">
       <div class="position-sticky sticky-top">
         <%= render "layouts/right_side_bar" %>
       </div>
