--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
             <% end %>
             <span class="fw-600 ml-3"> <%= link_to @post.user.name, user_path(@post.user), class: "text-decoration-none text-dark fw-600" %></span>
             <div class="more-actions ml-auto">
-              <i class="fa fa-ellipsis-h fa-large"></i>
+
             </div>
           </div>
           <div class="post-detail-comments-wrapper pl-4 pr-5 pt-3 ">
@@ -25,7 +25,7 @@
                 <% end %>
                 <div class="mt-2 ml-3">
                   <span class="fw-600"> <%= link_to @post.user.name, user_path(@post.user), class: "text-decoration-none text-dark fw-600" %></span>
-                  <span class="font-weight-normal">
+                  <span class="font-weight-normal pr-2">
                     <%= @post.content %>
                   </span>
                   <p class="text-secondary"><%= time_ago_in_words @post.created_at %> ago</p>
