--- a/app/views/post_mailer/post_deleted_email.html.erb
+++ b/app/views/post_mailer/post_deleted_email.html.erb
@@ -5,11 +5,13 @@
   </head>
   <body>
     <h3>Hi, this post from Golden Blog was deleted because of some reasons</h3>
+    <p><%= @post_title %></p>
+
+    <p><%= @author %></p>
     <hr/>
-    <p>Author: <%= @post.user.email  %></p>
     <br>
-    <p><%= @post.title %></p>
-    <%= image_tag( @post.image.to_s ) %>
-    <p><%= @post.content %></p>
+    <p><%= @post_title %></p>
+
+    <p><%= @author %></p>
   </body>
 </html>
